# ikm-cpp

./: AddTaskDialog.qml  CMakeLists.txt  DatePicker.qml  DateSelector.qml  EditTaskDialog.qml  ErrorDialog.qml  Main.qml  README.md  TaskCard.qml  databasemanager.cpp  databasemanager.h  main.cpp  taskmodel.cpp  taskmodel.h
